--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://cdn.ckeditor.com/4.13.1/full/ckeditor.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
